force-app/main/default/objects/Holiday__mdt/Holiday__mdt.object-meta.xml
<CustomObject>
    <description>山本</description>
    <label>休日</label>
</CustomObject>