force-app/main/default/objects/Holiday__mdt/fields/flg_long_vacation__c.field-meta.xml
<CustomField>
    <fullName>flg_long_vacation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>オークション出品を停止する長期休暇期間に該当するか判断するフラグ</description>
    <label>長期休暇フラグ</label>
    <type>Checkbox</type>
</CustomField>