force-app/main/default/objects/Holiday__mdt/fields/Holiday__c.field-meta.xml
<CustomField>
    <fullName>Holiday__c</fullName>
    <description>山本</description>
    <label>休日</label>
    <type>Date</type>
</CustomField>