force-app/main/default/objects/Holiday__mdt/fields/holiday_type__c.field-meta.xml
<CustomField>
    <fullName>holiday_type__c</fullName>
    <description>山本</description>
    <label>休日種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>